<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/main"
    tools:context="com.manoranjank.deltatask.MainActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:src="@drawable/left" />

    <Button
        android:id="@+id/buttonreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="Reset" />

    <LinearLayout
        android:id="@+id/nameofstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/stone1t"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/stone2t"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/stone3t"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/stone4t"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/stone5t"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/stone6t"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"

        android:orientation="vertical">

        <TextView
            android:id="@+id/stone1"
            android:layout_width="match_parent"

            android:layout_height="55dp"
            android:text="00"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/stone2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="00"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/stone3"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="00"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/stone4"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="00"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/stone5"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="00"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/stone6"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="00"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

    </LinearLayout>


</RelativeLayout>

